--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h2>SELECT ONE OPTION</h2>
 
-    <div><button onclick="window.location.href='Interest Rate Earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potencial Earnings</span></button></div>
+    <div><button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potencial Earnings</span></button></div>
 
     <div><button onclick="window.location.href='https://www.google.com'">Click me!</button></div>
 
