--- a/interest-rate-earnings.html
+++ b/interest-rate-earnings.html
@@ -142,6 +142,8 @@
         </tr>
     </table>
 
+    <a href="index.html"><img src="https://cdn-icons-png.flaticon.com/128/2997/2997744.png" width="50" height="50" style="max-width: 50px; max-height: 50px;"></a>
+
     <script>
 
         document.getElementById("deposit").addEventListener("keyup", function (event) {
