--- a/interest-rate-earnings.html
+++ b/interest-rate-earnings.html
@@ -173,8 +173,8 @@
     </table>
 
     <a href="index.html" class="image-container">
-      <img src="https://bit.ly/451d0K8" alt="First Image">
-      <img class="hover-image" src="https://bit.ly/45YPa38" alt="Second Image">
+      <img src="https://bit.ly/3PtCcU4" alt="First Image">
+      <img class="hover-image" src="https://bit.ly/45X0AEl" alt="Second Image">
     </a>
 
     <script>
