--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div><button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potencial Earnings</span></button></div>
 
-    <div><button onclick="window.location.href='test.html'">Click me!</button></div>
+    <div><button onclick="window.location.href='test.html'">Test</button></div>
 
 </body>
 
