--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h2>SELECT ONE OPTION</h2>
 
-    <div><button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potencial Earnings</span></button></div>
+    <div><button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potential Earnings</span></button></div>
 
-    <div><button onclick="window.location.href='test.html'">Test</button></div>
+    <div><button onclick="window.location.href='time-left.html'">Time Left<br/><span class="sub-text">Calculates Time Left between today and a future date</span></button></div>
 
 </body>
 
