--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div><button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potential Earnings</span></button></div>
 
-    <div><button onclick="window.location.href='time-left.html'">Time Left<br/><span class="sub-text">Calculates Time Left between today and a future date</span></button></div>
+    <div><button onclick="window.location.href='time-left.html'">Time Left<br/><span class="sub-text">Time Left Between Today & Future Date</span></button></div>
 
 </body>
 
