--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div><button onclick="window.location.href='time-left.html'">Time Left<br/><span class="sub-text">Time Left Between Today & Future Date</span></button></div>
 
-    <div><button onclick="window.location.href='SKU-Generator.html'">SKU Generator<br/><span class="sub-text">Generate Product SKUs</span></button></div>
+    <div><button onclick="window.location.href='SKU-Generator.html'">SKU Generator<br/><span class="sub-text">Generates Unique Product SKUs</span></button></div>
 
 </body>
 
