--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <div><button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potential Earnings</span></button></div>
 
+     <div><button onclick="window.location.href='Price-Comparison.html'">Price Comparison<br/><span class="sub-text">Compares Prices of Groceries</span></button></div>
+
     <div><button onclick="window.location.href='time-left.html'">Time Left<br/><span class="sub-text">Time Left Between Today & Future Date</span></button></div>
 
     <div><button onclick="window.location.href='SKU-Generator.html'">SKU Generator<br/><span class="sub-text">Generates Unique Product SKUs</span></button></div>
