--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <h2>SELECT ONE OPTION</h2>
 
-    <div><button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potential Earnings</span></button></div>
+    <div>
+        
+        <button onclick="window.location.href='interest-rate-earnings.html'">Interest Rates<br/><span class="sub-text">Calculate Potential Earnings</span></button>
 
-     <div><button onclick="window.location.href='PriceComparison.html'">Price Comparison<br/><span class="sub-text">Compares Prices of Groceries</span></button></div>
+     <button onclick="window.location.href='PriceComparison.html'">Price Comparison<br/><span class="sub-text">Compares Prices of Groceries</span></button></div>
 
     <div><button onclick="window.location.href='time-left.html'">Time Left<br/><span class="sub-text">Time Left Between Today & Future Date</span></button></div>
 
