--- a/SKU-Generator.html
+++ b/SKU-Generator.html
@@ -102,7 +102,7 @@ function handleKeyPress(event) {
 }
 
 function generateSKU() {
-  let prefix = "MG" + document.getElementById("prefix").value.toUpperCase();
+  let prefix = "MAYA" + document.getElementById("prefix").value.toUpperCase();
 
   let sku = prefix + "-";
 
